syntax = "proto3";

package fortiledger360.v1;

// ---------------------------------------------------------------------------
// FortiLedger360 Enterprise Security Suite – Config Protocol Definitions
//
// This file defines the canonical configuration contract used by the
// Config-Manager mesh-service.  All tenant and platform-wide settings are
// expressed through these messages and persisted in the configuration store.
// Any breaking change MUST trigger a coordinated upgrade across the mesh.
// ---------------------------------------------------------------------------

// ---------------------------------------------------------------------------
// Global options
// ---------------------------------------------------------------------------
option optimize_for = SPEED;
option cc_enable_arenas = true;        // Minimise heap fragmentation in C++
option java_multiple_files = true;
option java_outer_classname = "FortiLedger360ConfigProto";

// ---------------------------------------------------------------------------
// Imports
// ---------------------------------------------------------------------------
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// ---------------------------------------------------------------------------
// Enumerations
// ---------------------------------------------------------------------------
enum Environment {
  ENVIRONMENT_UNSPECIFIED = 0;
  ENVIRONMENT_PRODUCTION  = 1;
  ENVIRONMENT_STAGING     = 2;
  ENVIRONMENT_DEVELOPMENT = 3;
}

// Common severity levels for alerting and logging.
enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  CRITICAL             = 1;
  HIGH                 = 2;
  MEDIUM               = 3;
  LOW                  = 4;
}

// ---------------------------------------------------------------------------
// Low-level TLS configuration shared by all gRPC endpoints.
// ---------------------------------------------------------------------------
message TLSConfig {
  // Toggle mutual-TLS.  Disabled endpoints will still refuse plaintext traffic.
  bool enabled                     = 1;
  // PEM-encoded certificate chain presented to clients.
  string cert_chain_path           = 2;
  // PEM-encoded private key that matches the certificate chain.
  string private_key_path          = 3;
  // One or more PEM-encoded CA bundles used to verify peer certificates.
  repeated string trusted_ca_paths = 4;
}

// ---------------------------------------------------------------------------
// Mesh-internal gRPC configuration.
// ---------------------------------------------------------------------------
message GrpcConfig {
  // RFC-7540 concurrent stream limit.
  uint32 max_concurrent_streams = 1;
  // Maximum message size allowed (bytes).
  uint32 max_message_size       = 2;
  // TLS settings for the server.
  TLSConfig tls                 = 3;
}

// ---------------------------------------------------------------------------
// Load-balancing tier configuration.
// ---------------------------------------------------------------------------
message LoadBalancingConfig {
  enum Strategy {
    STRATEGY_UNSPECIFIED = 0;
    ROUND_ROBIN          = 1;
    LEAST_CONNECTIONS    = 2;
    IP_HASH              = 3;
  }

  Strategy strategy          = 1;
  // Upper bound on backend nodes for this tenant.
  uint32 max_nodes           = 2;
  // Enable cookie-based session persistence.
  bool session_persistence   = 3;
}

// ---------------------------------------------------------------------------
// Vulnerability scanning configuration.
// ---------------------------------------------------------------------------
message ScanConfig {
  enum Depth {
    DEPTH_UNSPECIFIED = 0;
    LIGHT             = 1; // Header & port scan
    STANDARD          = 2; // Full CVE database
    DEEP              = 3; // Binary / container diffing
  }

  Depth depth                              = 1;
  // Execution interval for continuous scans (0 = disabled).
  google.protobuf.Duration interval        = 2;
  // Allow tenants to supply additional CVE identifiers to track ad-hoc.
  repeated string custom_vulnerability_ids = 3;
  // Enable/disable scanning for the tenant completely.
  bool enabled                             = 4;
}

// ---------------------------------------------------------------------------
// Backup & disaster-recovery configuration.
// ---------------------------------------------------------------------------
message BackupConfig {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    FULL             = 1;
    INCREMENTAL      = 2;
    DIFFERENTIAL     = 3;
  }

  Type type                        = 1;
  // Permitted start/stop window for nightly backups.
  google.protobuf.Duration window  = 2;
  // Backup expiration timestamp (inclusive).
  google.protobuf.Timestamp retention_until = 3;
  // At-rest AES-256 encryption toggle.
  bool encryption_enabled           = 4;
}

// ---------------------------------------------------------------------------
// SLA-bound alerting policy.
// ---------------------------------------------------------------------------
message AlertConfig {
  // Severity thresholds that will trigger notifications.
  repeated Severity thresholds          = 1;
  // Minimum distance between consecutive alerts.
  google.protobuf.Duration throttle_window = 2;
  // Policy toggle.
  bool enabled                          = 3;
}

// ---------------------------------------------------------------------------
// Per-tenant configuration.
// ---------------------------------------------------------------------------
message TenantConfig {
  // Primary identifier from the billing system.
  string tenant_id              = 1;
  // Human-readable tenant name for dashboards/UI.
  string tenant_name            = 2;

  ScanConfig scan               = 3;
  BackupConfig backup           = 4;
  LoadBalancingConfig lb        = 5;
  AlertConfig alert             = 6;

  // Restrict API access to a whitelist of CIDR blocks.
  repeated string allowed_ip_cidr = 7;
}

// ---------------------------------------------------------------------------
// System-wide configuration bundle.
// ---------------------------------------------------------------------------
message SystemConfig {
  Environment environment                 = 1;
  GrpcConfig grpc                         = 2;

  // Complete list of tenant-specific overrides.
  repeated TenantConfig tenants           = 3;

  // Arbitrary key/value labels propagated to every telemetry payload
  // (e.g., "datacenter" -> "us-east-1").
  map<string, string> global_labels       = 4;

  // Observer endpoints that should receive real-time event replication.
  repeated string observer_endpoints      = 5;

  // Persist every config change into the Audit-Log service if enabled.
  bool enable_audit_log                   = 6;

  // Default SLA response time (minutes) for incidents without an explicit rule.
  uint32 default_sla_minutes              = 7;
}

// ---------------------------------------------------------------------------
// Envelope – includes versioning metadata to facilitate rollbacks.
// ---------------------------------------------------------------------------
message ConfigEnvelope {
  // SemVer (e.g., "1.0.7") matching the config schema.
  string version                       = 1;
  SystemConfig system                  = 2;
  // Timestamp when the envelope was produced.
  google.protobuf.Timestamp generated_at = 3;
}

// ---------------------------------------------------------------------------
// gRPC service exposed by the Config-Manager mesh-service.
// ---------------------------------------------------------------------------
service ConfigService {
  // Fetch the current system configuration snapshot.
  rpc GetSystemConfig(GetSystemConfigRequest)
      returns (ConfigEnvelope);

  // Replace the system configuration with a new snapshot.
  rpc UpdateSystemConfig(UpdateSystemConfigRequest)
      returns (ConfigEnvelope);

  // Server-side streaming endpoint that notifies consumers whenever
  // a new configuration is committed.
  rpc WatchSystemConfig(WatchSystemConfigRequest)
      returns (stream ConfigEnvelope);
}

// ---------------------------------------------------------------------------
// Service request/response messages
// ---------------------------------------------------------------------------
message GetSystemConfigRequest {
  // Optional ETag to support conditional retrieval (If-None-Match).
  google.protobuf.StringValue etag = 1;
}

message UpdateSystemConfigRequest {
  // New config snapshot to commit.
  ConfigEnvelope envelope = 1;
  // Allow update only if the current ETag matches.
  google.protobuf.StringValue if_match = 2;
}

message WatchSystemConfigRequest {
  // Starting version; server will push any newer revisions.
  string from_version = 1;
}